# spark-sample

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.full.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
config/: application.yaml  otel-collector-config-simple.yaml  otel-collector-config.yaml  prometheus.yml
config/grafana/dashboards/spark/: spark-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
docs/: VIRTUAL_ENV_GUIDE.md
notebooks/: README.md  s3_utils.py
scripts/: entrypoint.sh  generate_sample_data.py  run_etl.sh  run_ml.sh  run_streaming.sh  setup-dev.sh  setup_aws_env.sh  start-full-stack.sh
src/: app.py
src/etl/: pipeline.py
src/ml/: training_pipeline.py
src/streaming/: kafka_processor.py
src/utils/: logging.py  monitoring.py  spark_config.py  telemetry.py
